Don't crash when pressing Delete on empty playlist.

BUG: 189021

svn path=/trunk/extragear/multimedia/amarok/; revision=950472